Fixing Layout issues

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -122,9 +122,13 @@
   text-transform: uppercase;
 }
 
+.zx7__anchor-wrap {
+  margin-left: 1.5rem;
+}
+
 .zx7__anchor {
   @include g.anchor;
-  margin: 0 0 0 1.5rem;
+  margin: 0;
   color: var(--clr-black-900);
   background-color: transparent;
   border: var(--border-black);
@@ -191,7 +195,7 @@
     margin-left: 3.89rem;
   }
 
-  .zx7__anchor {
+  .zx7__anchor-wrap {
     margin-left: 3.98rem;
   }
 }
@@ -265,7 +269,7 @@
     margin-left: 5.94rem;
   }
 
-  .zx7__anchor {
+  .zx7__anchor-wrap {
     margin-left: 6.03rem;
   }
 }
